<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_middle"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--part one-->
        <TextView
            style="@style/EditorTitleStyle"
            android:text="@string/product_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_little">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_price_hint"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldWithButtonStyle"
                    android:hint="@string/product_quantity_hint"
                    android:inputType="number" />

                <Button
                    android:id="@+id/edit_quantity_increase"
                    android:layout_width="@dimen/padding_large"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/edit_quantity_decrease"
                    android:layout_width="@dimen/padding_large"
                    android:layout_height="wrap_content"
                    android:text="-" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--part two-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EditorTitleStyle"
            android:text="@string/product_supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_little">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name_hint"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldWithButtonStyle"
                    android:hint="@string/supplier_phone_hint"
                    android:inputType="phone" />

                <ImageView
                    android:id="@+id/phoneButton"
                    android:layout_width="@dimen/padding_large"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_phone" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>